<resources>
    <string name="app_name">GFIT</string>
    <string name="welcome_to">Welcome to</string>
    <string name="gfit">gFIT</string>
    <string name="welcome1_image_content_description">a fit woman for welcome page</string>
    <string name="pass_txtView">Pass</string>
    <string name="next_button">next button</string>
    <string name="get_transform_now">Get Transform now !</string>
    <string name="welcome2_content_description">a woman layed on a ballon</string>
    <string name="personalized_workout">Personalized workout programs !</string>
    <string name="a_recep">a recep</string>
    <string name="fast_easy_adapted_meals"><![CDATA[Fast, Easy & Adapted Receps !]]></string>
    <string name="woman_hitt">a woman doing a hitt session</string>
    <string name="join_team">Join a group who has the same objectives as you !</string>
    <string name="login_image">login_image</string>
    <string name="happy_to_see_you_back">Happy to see you back !</string>
    <string name="email">email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_label">Email *</string>
    <string name="email_icon">email_icon</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="input_password">Password</string>
    <string name="password_icon">password_icon</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="join_us_now_and_get_transform">Join us now and get transform !</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="congrats_for_your_first_step">Congrats for your first step</string>
    <string name="help_us_build_your_program">Help us build your program !</string>
    <string name="let_s_go">LET\'S GO !</string>
    <string name="how_should_we_call_you">How should we call you ?</string>
    <string name="enter_your_name">Enter your full name</string>
    <string name="tell_us_about_your_age">Tell us about your age !</string>
    <string name="what_about_your_sex">What about your sex</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="how_tall_are_you_in_cm">How tall are you (in cm) ?</string>
    <string name="what_about_your_weight_in_kg">What about your weight (in kg) ?</string>
    <string name="what_would_be_your_target_weight_optional">What would be your target weight (optional)</string>
    <string name="next">Next</string>
    <string name="_1_4">1 / 4</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="enter_your_last_known_weight">Enter your last known weight</string>
    <string name="enter_your_target_weight">Enter your target weight</string>
    <string name="what_is_your_physical_goal">What is your physical goal ?</string>
    <string name="choose_your_goal">Choose your goal</string>
    <string name="what_is_your_priority">What is your priority ?</string>
    <string name="choose_your_deadline">How many months do you need ?</string>
    <string name="how_many_days_per_week_are_you_available">How many days/week are you available ?</string>
    <string name="choose_your_frequency">How often do you go to the gym ?</string>
    <string name="what_is_your_maximum_session_duration_per_day">What is your maximum session duration/day</string>
    <string name="enter_duration_in_minutes">Enter a duration (min)</string>
    <string name="do_you_have_access_to_gym_or_equipment">Do you have access to gym or equipment ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_2_4">2 / 4</string>
    <string name="how_would_you_describe_your_daily_activity">How would you describe your daily activity level ?</string>
    <string name="choose_your_activity_level">Enter your activity level (1 to 10 scale)</string>
    <string name="do_you_practice_other_sports_or_physical_activities">Do you practice other sports or physical activities ?</string>
    <string name="specify_your_sport_if_yes">Specify your sport or activity if yes</string>
    <string name="what_is_your_diet">What is your diet ?</string>
    <string name="choose_your_diet">Normal or Vegan ?</string>
    <string name="what_are_your_allergies">What are your allergies ?</string>
    <string name="enter_your_allergies">Enter your allergies</string>
    <string name="what_is_your_cooking_level">What is your cooking level ?</string>
    <string name="choose_your_cooking_level">Enter your cooking level</string>
    <string name="_3_4">3 / 4</string>
    <string name="_4_4">4 / 4</string>
    <string name="choose_your_motivation_source">Enter your motivation source</string>
    <string name="what_is_your_main_source_of_motivation">What is your main source of motivation ?</string>
    <string name="choose_from_obstacles">Enter your obstacles</string>
    <string name="what_obstacles_do_you_face">What obstacles do you face ?</string>
    <string name="do_you_take_supplements">Do you take supplements ?</string>
    <string name="your_peronalized_workout_program_is_wating_you">Your peronalized workout program is wating you !</string>
    <string name="go_to_your_profile_to_get_it">Go to your profile to get it</string>
    <string name="profile_picture">profile_picture</string>
    <string name="hello">Hello</string>
    <string name="joana_malhibu">Joana Malhibu</string>
    <string name="menu_button">menu_button</string>
    <string name="ic_birthday">ic_birthday</string>
    <string name="user_age">27</string>
    <string name="user_height">user_height</string>
    <string name="user_heightTxt">170 cm</string>
    <string name="user_weight">user_weight</string>
    <string name="user_weightTxt">58 kg</string>
    <string name="user_gender">user gender</string>
    <string name="user_genderTxtView">Woman</string>
    <string name="more">Log out</string>
    <string name="current_stats">Current stats</string>
    <string name="current_statsimgview">current statsImgView</string>
    <string name="card_background_image">card_background_image</string>
    <string name="start">Start</string>
    <string name="ic_timer">ic_timer</string>
    <string name="workout_duration">3 min</string>
    <string name="push_ups">Push ups</string>
    <string name="workout_image">workout image</string>
    <string name="custom_workout_program">Custom workout program</string>
    <string name="workout_day">Day 1</string>
</resources>