<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/form2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_physical_goal"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/physical_goalEdtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_spinner"
            android:padding="12dp"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/choose_your_goal"
            android:layout_marginBottom="24dp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_priority"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/priority_deadlineEdtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_spinner"
            android:padding="12dp"
            android:inputType="number"
            android:importantForAutofill="no"
            android:hint="@string/choose_your_deadline"
            android:layout_marginBottom="24dp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_many_days_per_week_are_you_available"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/workout_frequencyEdtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_spinner"
            android:padding="12dp"
            android:inputType="number"
            android:importantForAutofill="no"
            android:hint="@string/choose_your_frequency"
            android:layout_marginBottom="24dp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_maximum_session_duration_per_day"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/max_durationEdtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_spinner"
            android:padding="12dp"
            android:inputType="number"
            android:hint="@string/enter_duration_in_minutes"
            android:importantForAutofill="no"
            android:layout_marginBottom="24dp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_have_access_to_gym_or_equipment"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <RadioGroup
            android:id="@+id/has_equipmentRdGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">

            <RadioButton
                android:id="@+id/yes_has_equipmentRdGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:layout_marginEnd="16dp" />

            <RadioButton
                android:id="@+id/has_no_equipmentRdGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textColor="@color/white" />
        </RadioGroup>

        <Button
            style="@style/Button"
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/white"
            android:padding="12dp"
            tools:ignore="VisualLintButtonSize" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/dot_unselected"
                android:layout_margin="4dp" />

            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/dot_selected"
                android:layout_margin="4dp" />

            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/dot_unselected"
                android:layout_margin="4dp" />

            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/dot_unselected"
                android:layout_margin="4dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_4"
            android:textColor="#808080"
            android:layout_gravity="end"
            android:layout_marginTop="8dp" />

    </LinearLayout>
</ScrollView>